# Rusty-Rubik

./: Cargo.toml  shell.nix
scripts/: verify_checksum.sh
src/: cube.rs  lib.rs  main.rs  parser.rs  pruning.rs  puzzle.rs  solver.rs
tests/: tests.rs
