[package]
name = "rusty-rubik"
version = "0.1.0"
description = "An experimental modification of Rusty-Rubik for use in qter."
repository = "https://github.com/ArhanChaudhary/Rusty-Rubik"
authors = ["Brandon Lin <brandbest1@gmail.com>", "Arhan Chaudhary <arhan.ch@gmail.com>"]
edition = "2021"
license-file = "LICENSE.md"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.9"
strum = "0.18.0"
strum_macros = "0.18.0"
priority-queue = "1.0.0"
clap = "3.0.0-beta.1"
bincode = "1.2.1"
colored = "2.0.0"
num = "0.4.0"
num-derive = "0.3"
num-traits = "0.2"
lazy_static = "1.4.0"
