[package]
name = "rusty-rubik"
version = "0.1.0"
description = "An experimental modification of Rusty-Rubik for use in qter."
repository = "https://github.com/ArhanChaudhary/Rusty-Rubik"
authors = ["Brandon Lin <brandbest1@gmail.com>", "Arhan Chaudhary <arhan.ch@gmail.com>"]
edition = "2021"
license-file = "LICENSE.md"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.11.1"
strum = "0.26.3"
strum_macros = "0.26.4"
itertools = "0.14.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
